--- a/pn_main.ui
+++ b/pn_main.ui
@@ -533,63 +533,20 @@
        <property name="tabSpacing">
         <number>2</number>
        </property>
-       <widget class="QWidget" name="page">
+       <widget class="QWidget" name="properties">
         <property name="geometry">
          <rect>
           <x>0</x>
           <y>0</y>
           <width>318</width>
-          <height>622</height>
+          <height>628</height>
          </rect>
         </property>
         <attribute name="label">
          <string>Properties</string>
         </attribute>
-        <layout class="QGridLayout" name="gridLayout_5">
-         <item row="0" column="0">
-          <widget class="QTreeView" name="trview_identity">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-             <horstretch>1</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="minimumSize">
-            <size>
-             <width>300</width>
-             <height>0</height>
-            </size>
-           </property>
-           <property name="maximumSize">
-            <size>
-             <width>16777215</width>
-             <height>16777215</height>
-            </size>
-           </property>
-           <property name="styleSheet">
-            <string notr="true"/>
-           </property>
-           <property name="locale">
-            <locale language="English" country="UnitedKingdom"/>
-           </property>
-           <property name="editTriggers">
-            <set>QAbstractItemView::NoEditTriggers</set>
-           </property>
-           <property name="alternatingRowColors">
-            <bool>false</bool>
-           </property>
-           <property name="selectionMode">
-            <enum>QAbstractItemView::SingleSelection</enum>
-           </property>
-           <property name="selectionBehavior">
-            <enum>QAbstractItemView::SelectRows</enum>
-           </property>
-           <attribute name="headerVisible">
-            <bool>false</bool>
-           </attribute>
-          </widget>
-         </item>
-         <item row="1" column="0" alignment="Qt::AlignLeft">
+        <layout class="QVBoxLayout" name="verticalLayout_2">
+         <item>
           <widget class="QDialogButtonBox" name="buttonBox_identity">
            <property name="enabled">
             <bool>false</bool>
@@ -625,36 +582,14 @@
           <x>0</x>
           <y>0</y>
           <width>318</width>
-          <height>622</height>
+          <height>628</height>
          </rect>
         </property>
         <attribute name="label">
          <string>Metadata</string>
         </attribute>
-        <layout class="QGridLayout" name="gridLayout_11">
-         <item row="0" column="0">
-          <widget class="QTreeView" name="trview_metadata">
-           <property name="styleSheet">
-            <string notr="true"/>
-           </property>
-           <property name="locale">
-            <locale language="English" country="UnitedKingdom"/>
-           </property>
-           <property name="frameShape">
-            <enum>QFrame::NoFrame</enum>
-           </property>
-           <property name="editTriggers">
-            <set>QAbstractItemView::NoEditTriggers</set>
-           </property>
-           <property name="wordWrap">
-            <bool>false</bool>
-           </property>
-           <attribute name="headerVisible">
-            <bool>false</bool>
-           </attribute>
-          </widget>
-         </item>
-         <item row="1" column="0" alignment="Qt::AlignLeft">
+        <layout class="QVBoxLayout" name="verticalLayout_4">
+         <item>
           <widget class="QDialogButtonBox" name="buttonBox_metadata">
            <property name="font">
             <font>
@@ -677,14 +612,14 @@
           <x>0</x>
           <y>0</y>
           <width>318</width>
-          <height>622</height>
+          <height>628</height>
          </rect>
         </property>
         <attribute name="label">
          <string>Names</string>
         </attribute>
-        <layout class="QGridLayout" name="gridLayout_2">
-         <item row="2" column="1">
+        <layout class="QVBoxLayout" name="verticalLayout_5">
+         <item>
           <layout class="QHBoxLayout" name="horizontalLayout_3">
            <property name="sizeConstraint">
             <enum>QLayout::SetMinimumSize</enum>
@@ -759,16 +694,6 @@
             </widget>
            </item>
           </layout>
-         </item>
-         <item row="1" column="1">
-          <widget class="QTreeView" name="trview_names">
-           <property name="editTriggers">
-            <set>QAbstractItemView::NoEditTriggers</set>
-           </property>
-           <attribute name="headerVisible">
-            <bool>false</bool>
-           </attribute>
-          </widget>
          </item>
         </layout>
        </widget>
