--- a/ui/pn_addtaxa.ui
+++ b/ui/pn_addtaxa.ui
@@ -9,8 +9,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>610</width>
-    <height>342</height>
+    <width>500</width>
+    <height>329</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -20,10 +20,20 @@
    </sizepolicy>
   </property>
   <property name="windowTitle">
-   <string>Add Synonym</string>
+   <string>Add reference</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="3" column="0">
+   <item row="4" column="0">
+    <widget class="Line" name="line">
+     <property name="frameShadow">
+      <enum>QFrame::Sunken</enum>
+     </property>
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="0">
     <widget class="QTabWidget" name="tabWidget_main">
      <property name="styleSheet">
       <string notr="true"/>
@@ -31,25 +41,30 @@
      <property name="tabPosition">
       <enum>QTabWidget::North</enum>
      </property>
+     <property name="tabShape">
+      <enum>QTabWidget::Rounded</enum>
+     </property>
      <property name="currentIndex">
       <number>0</number>
+     </property>
+     <property name="usesScrollButtons">
+      <bool>true</bool>
+     </property>
+     <property name="documentMode">
+      <bool>false</bool>
+     </property>
+     <property name="tabsClosable">
+      <bool>false</bool>
+     </property>
+     <property name="tabBarAutoHide">
+      <bool>false</bool>
      </property>
      <widget class="QWidget" name="tab">
       <attribute name="title">
        <string>USER</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_6">
-       <item row="2" column="0">
-        <widget class="Line" name="line">
-         <property name="frameShadow">
-          <enum>QFrame::Sunken</enum>
-         </property>
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="0">
+       <item row="0" column="0" alignment="Qt::AlignTop">
         <widget class="QWidget" name="Layout_edit" native="true">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
@@ -70,7 +85,24 @@
           </size>
          </property>
          <layout class="QGridLayout" name="gridLayout_3">
+          <item row="0" column="1">
+           <widget class="QComboBox" name="rankComboBox"/>
+          </item>
+          <item row="3" column="0">
+           <widget class="QLabel" name="publishedLabel">
+            <property name="text">
+             <string>Published</string>
+            </property>
+           </widget>
+          </item>
           <item row="1" column="0">
+           <widget class="QLabel" name="basenameLabel">
+            <property name="text">
+             <string>Name</string>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="0">
            <widget class="QLabel" name="authorsLabel">
             <property name="text">
              <string>Authors</string>
@@ -78,70 +110,36 @@
            </widget>
           </item>
           <item row="0" column="0">
-           <widget class="QLabel" name="basenameLabel">
+           <widget class="QLabel" name="rankLabel">
             <property name="text">
-             <string>Name</string>
+             <string>Rank</string>
             </property>
            </widget>
           </item>
-          <item row="1" column="1">
-           <widget class="QLineEdit" name="authorsLineEdit"/>
-          </item>
-          <item row="2" column="0">
-           <widget class="QLabel" name="publishedLabel">
-            <property name="text">
-             <string>Category</string>
+          <item row="3" column="1">
+           <widget class="QComboBox" name="publishedComboBox">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="styleSheet">
+             <string notr="true"/>
+            </property>
+            <property name="frame">
+             <bool>false</bool>
             </property>
            </widget>
-          </item>
-          <item row="0" column="1">
-           <widget class="QLineEdit" name="basenameLineEdit"/>
           </item>
           <item row="2" column="1">
-           <widget class="QComboBox" name="categoryComboBox">
-            <property name="currentText">
-             <string>Orthographic</string>
-            </property>
-            <property name="currentIndex">
-             <number>0</number>
-            </property>
-            <item>
-             <property name="text">
-              <string>Orthographic</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>Nomenclatural</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>Taxinomic</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>Vernacular</string>
-             </property>
-            </item>
-           </widget>
+           <widget class="QLineEdit" name="authorsLineEdit"/>
+          </item>
+          <item row="1" column="1">
+           <widget class="QLineEdit" name="basenameLineEdit"/>
           </item>
          </layout>
         </widget>
-       </item>
-       <item row="7" column="0">
-        <spacer name="verticalSpacer">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>40</height>
-          </size>
-         </property>
-        </spacer>
        </item>
       </layout>
      </widget>
@@ -149,18 +147,6 @@
       <attribute name="title">
        <string>POWO</string>
       </attribute>
-      <layout class="QGridLayout" name="gridLayout_2">
-       <item row="0" column="0">
-        <widget class="QLabel" name="label">
-         <property name="styleSheet">
-          <string notr="true">font: italic 13pt &quot;Ubuntu Mono&quot;;</string>
-         </property>
-         <property name="text">
-          <string>Check the taxa to add</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
      </widget>
      <widget class="QWidget" name="tab_3">
       <attribute name="title">
@@ -176,53 +162,42 @@
       <attribute name="title">
        <string>ENDEMIA</string>
       </attribute>
-      <widget class="QTableView" name="tblview_api">
+      <widget class="QTreeView" name="trView_childs">
        <property name="geometry">
         <rect>
-         <x>320</x>
-         <y>30</y>
+         <x>20</x>
+         <y>0</y>
          <width>256</width>
          <height>192</height>
         </rect>
        </property>
        <property name="editTriggers">
-        <set>QAbstractItemView::DoubleClicked|QAbstractItemView::EditKeyPressed</set>
-       </property>
-       <property name="alternatingRowColors">
-        <bool>true</bool>
+        <set>QAbstractItemView::NoEditTriggers</set>
        </property>
        <property name="selectionBehavior">
-        <enum>QAbstractItemView::SelectItems</enum>
+        <enum>QAbstractItemView::SelectRows</enum>
        </property>
-       <attribute name="verticalHeaderVisible">
+       <property name="sortingEnabled">
+        <bool>true</bool>
+       </property>
+       <attribute name="headerVisible">
         <bool>false</bool>
        </attribute>
       </widget>
      </widget>
     </widget>
    </item>
-   <item row="6" column="0">
-    <layout class="QHBoxLayout" name="horizontalLayout">
-     <item>
-      <widget class="QDialogButtonBox" name="buttonBox">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="standardButtons">
-        <set>QDialogButtonBox::Apply|QDialogButtonBox::Close</set>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </item>
-   <item row="1" column="0">
-    <widget class="Line" name="line_2">
+   <item row="3" column="0">
+    <widget class="QDialogButtonBox" name="buttonBox">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
+     <property name="standardButtons">
+      <set>QDialogButtonBox::Apply|QDialogButtonBox::Close</set>
+     </property>
     </widget>
    </item>
-   <item row="0" column="0">
+   <item row="5" column="0">
     <layout class="QFormLayout" name="formLayout">
      <property name="leftMargin">
       <number>9</number>
@@ -230,17 +205,10 @@
      <property name="rightMargin">
       <number>9</number>
      </property>
-     <item row="0" column="0">
-      <widget class="QLabel" name="label_2">
-       <property name="text">
-        <string>Add Synonym</string>
-       </property>
-      </widget>
-     </item>
      <item row="0" column="1">
       <widget class="QLabel" name="taxaLineEdit_result">
        <property name="sizePolicy">
-        <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
@@ -258,7 +226,7 @@
         </size>
        </property>
        <property name="styleSheet">
-        <string notr="true">font: 12pt &quot;Ubuntu&quot;;</string>
+        <string notr="true"/>
        </property>
        <property name="text">
         <string>TextLabel</string>
@@ -271,10 +239,30 @@
        </property>
       </widget>
      </item>
+     <item row="0" column="0">
+      <widget class="QLabel" name="label_2">
+       <property name="font">
+        <font>
+         <italic>true</italic>
+        </font>
+       </property>
+       <property name="text">
+        <string>Add Taxon</string>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>rankComboBox</tabstop>
+  <tabstop>basenameLineEdit</tabstop>
+  <tabstop>authorsLineEdit</tabstop>
+  <tabstop>publishedComboBox</tabstop>
+  <tabstop>trView_childs</tabstop>
+  <tabstop>tabWidget_main</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
