--- a/ui/pn_movetaxa.ui
+++ b/ui/pn_movetaxa.ui
@@ -20,7 +20,7 @@
    </sizepolicy>
   </property>
   <property name="windowTitle">
-   <string>Reference</string>
+   <string>Merge reference</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="6" column="0">
@@ -80,7 +80,7 @@
         <string notr="true"/>
        </property>
        <property name="text">
-        <string>Move</string>
+        <string>Merge</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -134,7 +134,7 @@ color: rgb(239, 239, 239);</string>
         </size>
        </property>
        <property name="text">
-        <string>To</string>
+        <string>With</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
