--- a/ui/pn_addtaxa.ui
+++ b/ui/pn_addtaxa.ui
@@ -98,7 +98,7 @@
       <enum>QTabWidget::North</enum>
      </property>
      <property name="tabShape">
-      <enum>QTabWidget::Rounded</enum>
+      <enum>QTabWidget::Triangular</enum>
      </property>
      <property name="currentIndex">
       <number>0</number>
