--- a/ui/taxanames.ui
+++ b/ui/taxanames.ui
@@ -46,6 +46,19 @@
     <item row="0" column="0">
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
+       <widget class="QPushButton" name="themes_button">
+        <property name="maximumSize">
+         <size>
+          <width>100</width>
+          <height>16777215</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>Themes</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <widget class="QToolButton" name="toolButton">
         <property name="text">
          <string>Filter</string>
@@ -198,6 +211,9 @@
         <property name="tabPosition">
          <enum>QTabWidget::South</enum>
         </property>
+        <property name="tabShape">
+         <enum>QTabWidget::Rounded</enum>
+        </property>
         <property name="currentIndex">
          <number>0</number>
         </property>
@@ -232,7 +248,7 @@
                 </property>
                 <property name="icon">
                  <iconset>
-                  <normaloff>icons/add.png</normaloff>icons/add.png</iconset>
+                  <normaloff>../icons/add.png</normaloff>../icons/add.png</iconset>
                 </property>
                 <property name="iconSize">
                  <size>
@@ -258,7 +274,7 @@
                 </property>
                 <property name="icon">
                  <iconset>
-                  <normaloff>icons/editing.png</normaloff>icons/editing.png</iconset>
+                  <normaloff>../icons/editing.png</normaloff>../icons/editing.png</iconset>
                 </property>
                 <property name="iconSize">
                  <size>
@@ -284,7 +300,7 @@
                 </property>
                 <property name="icon">
                  <iconset>
-                  <normaloff>icons/remove.png</normaloff>icons/remove.png</iconset>
+                  <normaloff>../icons/remove.png</normaloff>../icons/remove.png</iconset>
                 </property>
                 <property name="iconSize">
                  <size>
@@ -310,7 +326,7 @@
                 </property>
                 <property name="icon">
                  <iconset>
-                  <normaloff>icons/merge.png</normaloff>icons/merge.png</iconset>
+                  <normaloff>../icons/merge.png</normaloff>../icons/merge.png</iconset>
                 </property>
                 <property name="iconSize">
                  <size>
@@ -362,19 +378,6 @@
                 </property>
                 <property name="text">
                  <string>PushButton</string>
-                </property>
-               </widget>
-              </item>
-              <item>
-               <widget class="QPushButton" name="themes_button">
-                <property name="maximumSize">
-                 <size>
-                  <width>100</width>
-                  <height>16777215</height>
-                 </size>
-                </property>
-                <property name="text">
-                 <string>Themes</string>
                 </property>
                </widget>
               </item>
@@ -471,8 +474,8 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>109</width>
-          <height>42</height>
+          <width>287</width>
+          <height>421</height>
          </rect>
         </property>
         <attribute name="label">
@@ -501,8 +504,8 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>272</width>
-          <height>45</height>
+          <width>287</width>
+          <height>421</height>
          </rect>
         </property>
         <attribute name="label">
@@ -521,7 +524,7 @@
              </property>
              <property name="icon">
               <iconset>
-               <normaloff>icons/plus.png</normaloff>icons/plus.png</iconset>
+               <normaloff>../icons/plus.png</normaloff>../icons/plus.png</iconset>
              </property>
              <property name="iconSize">
               <size>
@@ -556,7 +559,7 @@
              </property>
              <property name="icon">
               <iconset>
-               <normaloff>icons/pen.png</normaloff>icons/pen.png</iconset>
+               <normaloff>../icons/pen.png</normaloff>../icons/pen.png</iconset>
              </property>
              <property name="iconSize">
               <size>
@@ -573,7 +576,7 @@
              </property>
              <property name="icon">
               <iconset>
-               <normaloff>icons/delete.png</normaloff>icons/delete.png</iconset>
+               <normaloff>../icons/delete.png</normaloff>../icons/delete.png</iconset>
              </property>
              <property name="iconSize">
               <size>
