--- a/ui/pn_editname.ui
+++ b/ui/pn_editname.ui
@@ -82,7 +82,7 @@
        </item>
        <item>
         <property name="text">
-         <string>Vernacular</string>
+         <string>Common</string>
         </property>
        </item>
        <item>
